[package]
name = "wallet-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = "2.1.0"
ring = "0.17.8"
serde = { version = "1.0.216", features = ["derive"] }
base64 = "0.22.1"
solana-client = "2.1.5"
solana-sdk = "2.1.5"
getrandom = "0.2.15"
serde_json = "1.0.133"
clap = { version = "4.5.23", features = ["derive"] }
tempfile = "3.14.0"